completed removing guava multimaps